<resources>
    <string name="app_name">TeamTalk</string>
    <string name="title_activity_server_list">TeamTalk</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_server_entry">TeamTalk 5 Server Properties</string>
    <string name="title_activity_main">TeamTalk 5 for Android</string>
    <string name="title_section_channels">Channels</string>
    <string name="title_section_chat">Chat</string>
    <string name="title_section_media">Media Streams</string>
    <string name="title_section_files">Files</string>
    <string name="title_activity_channel_prop">Channel Properties</string>
    <string name="title_activity_user_prop">User Properties</string>
    <string name="title_activity_text_message">Text Message</string>
    <string name="text_user_typing_title">%1$s is typing...</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_stream_media">Stream media file to channel</string>
    <string name="action_createchannel">Create</string>
    <string name="action_updatechannel">Update</string>
    <string name="text_con_encryption_error">Encryption error: %1$s</string>
    <string name="text_con_failed">Failed to connect to server. Retrying...</string>
    <string name="text_con_lost">Lost connection to server</string>
    <string name="text_con_success">Connected to server</string>
    <string name="text_con_cmderr">Failed to issue command</string>
    <string name="text_cmderr_login">Failed to issue login command</string>
    <string name="text_cmd_loggedin">Logged on to server</string>
    <string name="text_cmd_joinchan">Joined channel:</string>
    <string name="text_cmd_leftchan">Left channel:</string>
    <string name="text_cmd_joinroot">Joined root channel</string>
    <string name="text_cmd_leftroot">Left root channel</string>
    <string name="text_cmd_userjoinchan">joined channel</string>
    <string name="text_cmd_userleftchan">left channel</string>
    <string name="text_cmd_userloggedout">logged out</string>
    <string name="text_cmd_userloggedin">logged in</string>
    <string name="pref_cat_subscriptions">Subscriptions</string>
    <string name="pref_cat_connection_general">General</string>
    <string name="pref_cat_tts">Text-To-Speech settings</string>
    <string name="pref_cat_tts_events">General Text-To-Speech messages</string>
    <string name="pref_cat_tts_transmission">Transmit Control Text-To-Speech messages</string>
    <string name="pref_cat_tts_subscription">Subscription Text-To-Speech messages</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_nickname">Nickname</string>
    <string name="pref_title_statusmsg">Status message</string>
    <string name="pref_default_nickname">NoName</string>
    <string name="pref_title_proximity_sensor">Proximity sensor</string>
    <string name="pref_title_keep_screen_on">Keep screen on when connected</string>
    <string name="pref_title_vibrate">Vibrate on PTT</string>
    <string name="pref_show_log_messages">Show log messages in chat history</string>
    <string name="pref_title_audio_icons">Sound Events</string>
    <string name="pref_title_rx_tx_audio_icon">Voice transmission toggle</string>
    <string name="pref_summary_rx_tx_audio_icon">Play sound when the TX button is pressed</string>
    <string name="pref_title_vox_audio_icon">Voice activation toggle</string>
    <string name="pref_title_vox_triggered_icon">Voice activation triggered</string>
    <string name="pref_summary_vox_triggered_icon">Play sound when voice activation is triggered</string>
    <string name="pref_title_private_message_audio_icon">Private message</string>
    <string name="pref_summary_private_message_audio_icon">Play sound when a private message is received</string>
    <string name="pref_title_channel_message_audio_icon">Channel message received</string>
    <string name="pref_summary_channel_message_audio_icon">Play sound when a channel message is received</string>
    <string name="pref_title_broadcast_message_audio_icon">Broadcast message</string>
    <string name="pref_summary_broadcast_message_audio_icon">Play sound when a broadcast message is received</string>
    <string name="pref_title_server_lost_audio_icon">Server connection lost</string>
    <string name="pref_summary_server_lost_audio_icon">Play sound when the connection is dropped</string>
    <string name="pref_title_files_update_audio_icon">File list updated</string>
    <string name="pref_summary_files_update_audio_icon">Play sound when files are added or removed</string>
    <string name="pref_title_transmitready_icon">Exclusive mode toggled</string>
    <string name="pref_summary_transmitready_icon">Play sound when you can transmit in a "No Interruptions" channel</string>
    <string name="pref_title_userjoin_icon">User joined channel</string>
    <string name="pref_summary_userjoin_icon">Play sound when a user joins the current channel</string>
    <string name="pref_title_userleft_icon">User left channel</string>
    <string name="pref_summary_userleft_icon">Play sound when a user leaves the current channel</string>
    <string name="pref_title_speech_engine">Text-To-Speech engine selection</string>
    <string name="pref_summary_speech_engine">Select an installed speech engine instead of the one in system settings</string>
    <string name="pref_title_a11y_volume">Use accessibility stream volume</string>
    <string name="pref_summary_a11y_volume">Text-to-speech messages will be played at the accessibility stream volume</string>
    <string name="pref_title_use_announcements">Use announcement events</string>
    <string name="pref_summary_use_announcements">Text-to-speech messages will be announced through the currently running accessibility service</string>
    <string name="pref_title_server_login">A user logs on to the server</string>
    <string name="pref_summary_server_login">Announce the name of the user logging in</string>
    <string name="pref_title_server_logout">A user logs out of the server</string>
    <string name="pref_summary_server_logout">Announce the name of the user logging out</string>
    <string name="pref_title_channel_join">A user joins the current channel</string>
    <string name="pref_summary_channel_join">Announce the name of a user joining the current channel</string>
    <string name="pref_title_channel_leave">A user leaves the current channel</string>
    <string name="pref_summary_channel_leave">Announce the name of a user leaving the current channel</string>
    <string name="pref_title_private_message">Private messages</string>
    <string name="pref_summary_private_message">Announce private messages</string>
    <string name="pref_title_channel_message">Channel messages</string>
    <string name="pref_summary_channel_message">Announce channel messages</string>
    <string name="pref_title_broadcast_message">Broadcast messages</string>
    <string name="pref_summary_broadcast_message">Announce broadcast messages</string>
    <string name="pref_title_mute_speakers">Mute speakers when pressing TX button</string>
    <string name="pref_summary_mute_speakers">Enable this to avoid echo from speakers</string>
    <string name="pref_title_show_usernames">Show usernames</string>
    <string name="pref_summary_show_usernames">Show usernames instead of nicknames</string>
    <string name="pref_title_mediafile_volume">Media file volume</string>
    <string name="pref_summary_mediafile_volume">Media file vs. voice volume</string>
    <string name="pref_title_speakerphone_checkbox">Enable speaker phone</string>
    <string name="pref_summary_speakerphone_checkbox">Switch from earpiece to speakers</string>
    <string name="pref_title_bluetooth_headset_checkbox">Use Bluetooth headset microphone</string>
    <string name="pref_summary_bluetooth_headset_checkbox">When a Bluetooth headset is connected, use its microphone</string>
    <string name="pref_title_voice_processing_checkbox">Enable voice preprocessing</string>
    <string name="pref_summary_voice_processing_checkbox">Use echo cancellation and automatic gain control</string>
    <string name="title_activity_audio_codec">Audio Codec</string>
    <string name="button_remove">Remove</string>
    <string name="action_edit">Edit Channel</string>
    <string name="action_join">Join</string>
    <string name="action_move">Move Here</string>
    <string name="action_allowvoice">Allow voice transmission for everyone</string>
    <string name="action_allowvideo">Allow video transmission for everyone</string>
    <string name="action_allowdesktop">Allow desktop transmission for everyone</string>
    <string name="action_allowmedia">Allow media files transmission for everyone</string>
    <string name="action_allowchanmsg">Allow channel text messages for everyone</string>
    <string name="action_upload">Upload File</string>
    <string name="action_stream">Stream a media file</string>
    <string name="channel_prop_title_name">Name</string>
    <string name="channel_prop_title_topic">Topic</string>
    <string name="channel_prop_title_password">Password</string>
    <string name="channel_prop_title_op_password">Op Password</string>
    <string name="channel_prop_title_maxusers">Max Users</string>
    <string name="channel_prop_title_diskquota">Disk Quota (KBytes)</string>
    <string name="channel_prop_title_permanent">Permanent Channel</string>
    <string name="channel_prop_title_nointerrupt">No Interruptions</string>
    <string name="channel_prop_title_classroom">Classroom</string>
    <string name="channel_prop_title_oprecvonly">Operator Receives Only</string>
    <string name="channel_prop_title_novoiceact">No Voice Activation</string>
    <string name="channel_prop_title_noaudiorecord">No Audio Recording</string>
    <string name="action_new_channel">New Channel</string>
    <string name="action_new_server">New Server</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_import_serverlist">Import from a .tt File</string>
    <string name="pref_title_server_info">Server Information</string>
    <string name="pref_title_server_name">Server Name</string>
    <string name="pref_title_server_address">Domain Name or IP-address</string>
    <string name="pref_title_tcp_port">TCP Port</string>
    <string name="pref_title_udp_port">UDP Port</string>
    <string name="pref_title_encription">Encrypted</string>
    <string name="pref_title_authentication">Authentication</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_title_bearware">BearWare.dk Web Login</string>
    <string name="pref_title_join_channel">Join Channel</string>
    <string name="pref_title_channel">Channel</string>
    <string name="pref_title_channel_password">Channel Password</string>
    <string name="pref_title_last_channel">Last Joined Channel</string>
    <string name="channamelab">Channel\'s name:</string>
    <string name="chanpswlab">Channel\'s password:</string>
    <string name="chantopiclab">Channel\'s topic:</string>
    <string name="chanoppswlab">Operator\'s password:</string>
    <string name="maxuserslab">Maximum number of users:</string>
    <string name="diskquotalab">Disk quota:</string>
    <string name="pref_title_channel_message_sent">Sent channel messages</string>
    <string name="pref_summary_channel_message_sent">Announce channel messages sent</string>
    <string name="pref_title_server_connection">Connection</string>
    <string name="pref_title_server_motd">Message of the Day</string>
    <string name="pref_title_server_usercount">Users Online</string>
    <string name="pref_title_server_country">Country</string>
    <string name="pref_title_server_status">Server Status</string>
</resources>