<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
        android:key="tts_def"
        android:title="@string/pref_cat_tts">
        
    <ListPreference
        android:key="pref_speech_engine"
        android:summary="@string/pref_summary_speech_engine"
        android:title="@string/pref_title_speech_engine" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_a11y_volume"
        android:summary="@string/pref_summary_a11y_volume"
        android:title="@string/pref_title_a11y_volume" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_use_announcements"
        android:summary="@string/pref_summary_use_announcements"
        android:title="@string/pref_title_use_announcements" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="tts_events_def"
        android:title="@string/pref_cat_tts_events">
        
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="server_login_checkbox"
        android:summary="@string/pref_summary_server_login"
        android:title="@string/pref_title_server_login" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="server_logout_checkbox"
        android:summary="@string/pref_summary_server_logout"
        android:title="@string/pref_title_server_logout" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="channel_join_checkbox"
        android:summary="@string/pref_summary_channel_join"
        android:title="@string/pref_title_channel_join" />
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="channel_leave_checkbox"
        android:summary="@string/pref_summary_channel_leave"
        android:title="@string/pref_title_channel_leave" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="private_message_checkbox"
        android:summary="@string/pref_summary_private_message"
        android:title="@string/pref_title_private_message" />
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="channel_message_checkbox"
        android:summary="@string/pref_summary_channel_message"
        android:title="@string/pref_title_channel_message" />
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="channel_message_sent_checkbox"
        android:summary="@string/pref_summary_channel_message_sent"
        android:title="@string/pref_title_channel_message_sent" />
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="broadcast_message_checkbox"
        android:summary="@string/pref_summary_broadcast_message"
        android:title="@string/pref_title_broadcast_message" />
    
    </PreferenceCategory>
    
</PreferenceScreen>
