<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
		android:key="mute_speakers_on_tx_checkbox"
		android:defaultValue="false"
		android:title="@string/pref_title_mute_speakers"
		android:summary="@string/pref_summary_mute_speakers" />

	<CheckBoxPreference
		android:key="speakerphone_checkbox"
		android:defaultValue="false"
		android:title="@string/pref_title_speakerphone_checkbox"
		android:summary="@string/pref_summary_speakerphone_checkbox" />

    <CheckBoxPreference
        android:key="voiceprocessing_checkbox"
        android:defaultValue="false"
        android:title="@string/pref_title_voice_processing_checkbox"
        android:summary="@string/pref_summary_voice_processing_checkbox" />

	<CheckBoxPreference
		android:key="bluetooth_headset_checkbox"
		android:defaultValue="false"
		android:title="@string/pref_title_bluetooth_headset_checkbox"
		android:summary="@string/pref_summary_bluetooth_headset_checkbox" />

	<dk.bearware.gui.SeekBarPreference
	    android:key="mediafilevolume_seekbar"
	    android:defaultValue="100"
	    android:title="@string/pref_title_mediafile_volume"
	    android:summary="@string/pref_summary_mediafile_volume" />

</PreferenceScreen>
