<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
		android:key="nickname_text"
		android:defaultValue="@string/pref_default_nickname"
		android:title="@string/pref_title_nickname"
		android:selectAllOnFocus="true"
		android:singleLine="true" />

    <CheckBoxPreference
		android:key="showusernames_checkbox"
		android:defaultValue="false"
		android:title="@string/pref_title_show_usernames"
		android:summary="@string/pref_summary_show_usernames" />

    <CheckBoxPreference
		android:key="vibrate_checkbox"
		android:defaultValue="true"
		android:title="@string/pref_title_vibrate" />

    <CheckBoxPreference
		android:key="proximity_sensor_checkbox"
		android:defaultValue="false"
		android:title="@string/pref_title_proximity_sensor" />

    <CheckBoxPreference
		android:key="keep_screen_on_checkbox"
		android:defaultValue="false"
		android:title="@string/pref_title_keep_screen_on" />

	<CheckBoxPreference
		android:key="showpublicservers_checkbox"
		android:defaultValue="true"
		android:title="@string/pref_title_public_servers"
		android:summary="@string/pref_summary_public_servers" />

    <CheckBoxPreference
		android:key="show_log_messages"
		android:defaultValue="true"
		android:title="@string/pref_show_log_messages" />


</PreferenceScreen>
