<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChannelPropActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/channamelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_name" />

        <EditText
            android:id="@+id/channame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/channamelab" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/chanpasswdlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_password" />

        <EditText
            android:id="@+id/chanpasswd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:hint="@string/chanpswlab" >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/chantopiclabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_topic" />

        <EditText
            android:id="@+id/chantopic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="3"
            android:hint="@string/chantopiclab" >
        </EditText>
    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/chanoppasswdlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_op_password"
            />

        <EditText
            android:id="@+id/chanoppasswd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:hint="@string/chanoppswlab" >
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_maxusers"
            />

        <EditText
            android:id="@+id/chanmaxusers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/maxuserslab" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_diskquota"
            />

        <EditText
            android:id="@+id/chandiskquota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/diskquotalab" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/setup_audcodec_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_audio_codec" />
<!-- 
        <Button
            android:id="@+id/setup_audcfg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Audio Config" />
 -->   
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/chan_permanent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_permanent" />

        <CheckBox
            android:id="@+id/chan_nointerrupt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_nointerrupt" />

        <CheckBox
            android:id="@+id/chan_classroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_classroom" />
                
        <CheckBox
            android:id="@+id/chan_oprecvonly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_oprecvonly" />
        
        <CheckBox
            android:id="@+id/chan_novoiceact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_novoiceact" />

        <CheckBox
            android:id="@+id/chan_noaudiorecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_noaudiorecord" />

        </LinearLayout>

</LinearLayout>
